feat: Add dark mode and light mode

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="theme-switcher-container">
+            <button id="theme-switcher">Toggle Theme</button>
+        </div>
         <h1>로또 번호 추천</h1>
         <div class="lotto-numbers">
             <span class="number"></span>
