feat: Modify lotto generator for 5 numbers and bonus option

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <span class="number"></span>
             <span class="number"></span>
             <span class="number"></span>
-            <span class="number"></span>
+        </div>
+        <div class="options">
+            <label for="includeBonus">보너스 번호 포함</label>
+            <input type="checkbox" id="includeBonus">
         </div>
         <button id="generate">새 번호 받기</button>
     </div>
