--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>저녁 메뉴 추천</title>
     <link rel="stylesheet" href="style.css">
     <!-- Google tag (gtag.js) -->
-<script async src="https.www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -14,6 +14,13 @@
 
   gtag('config', 'G-C8QR98TVTB');
 </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "v2qmp0i82b");
+    </script>
 </head>
 <body>
     <div class="container">
