Optimize SEO by updating index.html and adding robots.txt and sitemap.xml

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>저녁 메뉴 추천</title>
+    <title>오늘 저녁 뭐 먹지? - 간편한 저녁 메뉴 추천기</title>
+    <meta name="description" content="오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 저녁 메뉴를 추천받으세요.">
+    <link rel="canonical" href="https://anse-sample1.pages.dev/">
+
+    <meta property="og:title" content="오늘 저녁 뭐 먹지? - 간편한 저녁 메뉴 추천기">
+    <meta property="og:description" content="오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 저녁 메뉴를 추천받으세요.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://anse-sample1.pages.dev/">
+    <meta property="og:image" content="https://anse-sample1.pages.dev/favicon.svg">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="오늘 저녁 뭐 먹지? - 간편한 저녁 메뉴 추천기">
+    <meta name="twitter:description" content="오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 저녁 메뉴를 추천받으세요.">
+    <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
+
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
@@ -54,8 +67,8 @@
         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
         *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
         var disqus_config = function () {
-            this.page.url = 'https://anse-sample1.web.app/';  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = 'https://anse-sample1.web.app/'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            this.page.url = 'https://anse-sample1.pages.dev/';  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = 'https://anse-sample1.pages.dev/'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
         };
         (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
