Further SEO and performance improvements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <meta name="twitter:description" content="오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 저녁 메뉴를 추천받으세요.">
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="style.css"></noscript>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
@@ -36,6 +37,18 @@
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "v2qmp0i82b");
     </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "오늘 저녁 뭐 먹지?",
+      "url": "https://anse-sample1.pages.dev/",
+      "description": "오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 저녁 메뉴를 추천받으세요.",
+      "applicationCategory": "Entertainment",
+      "operatingSystem": "Any",
+      "browserRequirements": "Requires HTML5 support"
+    }
+    </script>
 </head>
 <body>
     <div class="container">
@@ -50,7 +63,7 @@
     </div>
 
     <div class="contact-section">
-        <h2>제휴 문의</h2>
+        <h2>저녁 메뉴 추천 제휴 문의</h2>
         <form action="https://formspree.io/f/mlggrwrk" method="POST">
             <input type="text" name="name" placeholder="이름" required>
             <input type="email" name="email" placeholder="이메일" required>
