--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="오늘 저녁 뭐 먹지? - AI 기반 저녁 메뉴 추천기 (2026년 기준)">
-    <meta name="twitter:description" content="AI가 추천하는 오늘 저녁 메뉴. 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.">
+    <meta name="twitter:description" content="오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.">
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
     <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
@@ -59,7 +59,10 @@
         <div class="theme-switcher-container">
             <button id="theme-switcher">Toggle Theme</button>
         </div>
-        <h1>오늘 저녁 뭐 먹지?</h1>
+        <h1><a href="/">오늘 저녁 뭐 먹지?</a></h1>
+        <nav>
+            <a href="/sentiment.html" style="margin-left: 20px;">금융 시장 심리</a>
+        </nav>
     </header>
 
     <main class="container">
