Implement 'Insect Face Test' feature with new pages and navigation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <h1><a href="/">오늘 저녁 뭐 먹지?</a></h1>
         <nav>
-            <a href="/sentiment.html" style="margin-left: 20px;">금융 시장 심리</a>
+            <a href="/insect.html" style="margin-left: 20px;">곤충상 테스트</a>
         </nav>
     </header>
 
