--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       }
     }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9750321636945438"
+     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-9750321636945438">
 </head>
 <body>
     <header class="container">
