--- a/sentiment.html
+++ b/sentiment.html
@@ -89,7 +89,7 @@
     </main>
 
     <div class="contact-section">
-        <h2>저녁 메뉴 추천 제휴 문의</h2>
+        <h2>제휴 문의</h2>
         <form action="https://formspree.io/f/mlggrwrk" method="POST">
             <input type="text" name="name" placeholder="이름" required>
             <input type="email" name="email" placeholder="이메일" required>
@@ -111,8 +111,8 @@
             const scoreSpan = document.getElementById('market-score');
             const functionUrl = 'https://us-central1-anse-sample1-46739525-2d1c0.cloudfunctions.net/getMarketVolatility';
 
-            sentimentSpan.textContent = '데이터를 불러오는 중...';
-            scoreSpan.textContent = '';
+            sentimentSpan.textContent = '준비중';
+            scoreSpan.textContent = ''; // Clear previous score as well
 
             fetch(functionUrl)
                 .then(response => {
