--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
     <footer class="container">
         <p>Last updated: 2026년 1월 17일</p>
+        <p><a href="/privacy.html">개인정보처리방침</a></p>
     </footer>
 
     <script src="main.js"></script>
