--- a/insect.html
+++ b/insect.html
@@ -53,7 +53,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <style>
         .image-preview-container {
-            max-width: 400px; /* Max width */
+            max-width: 300px; /* Max width */
             width: 100%; /* Responsive width */
             height: auto; /* Maintain aspect ratio */
             margin: 20px auto; /* Center the image preview */
@@ -68,7 +68,7 @@
         .image-preview-container img {
             max-width: 100%; /* Ensure image fits container */
             max-height: 100%;
-            object-fit: contain; /* Contain the entire image */
+            object-fit: cover; /* Contain the entire image */
             display: block;
         }
         .prediction-graph {
