--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <article>
             <div class="menu-display">
                 <span id="menu-recommendation">AI가 잠시 후 저녁 메뉴를 추천합니다...</span>
+                <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none; max-width: 100%; height: auto; margin-top: 15px; border-radius: 8px;">
             </div>
             <button id="generate">추천 받기</button>
         </article>
