Fix: Reorder menu image and text for better display
- Reordered the 'menu-image' to appear above 'menu-recommendation' within the 'menu-display' div in 'index.html' for improved visual hierarchy.
- Adjusted margin from 'margin-top' to 'margin-bottom' for spacing.

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <main class="container">
         <article>
             <div class="menu-display">
+                <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none; max-width: 100%; height: auto; margin-bottom: 15px; border-radius: 8px;">
                 <span id="menu-recommendation">AI가 잠시 후 저녁 메뉴를 추천합니다...</span>
-                <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none; max-width: 100%; height: auto; margin-top: 15px; border-radius: 8px;">
             </div>
             <button id="generate">추천 받기</button>
         </article>
