--- a/insect.html
+++ b/insect.html
@@ -53,8 +53,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <style>
         .image-preview-container {
-            max-width: 350px; /* Max width */
-            width: 100%; /* Responsive width */
+            max-width: 100%; /* Max width */
+            width: 30em; /* Responsive width */
             height: auto; /* Maintain aspect ratio */
             margin: 20px auto; /* Center the image preview */
             border-radius: 10px;
