Enhancement: Improve image loading experience
- Implemented a loading indicator that maintains container size during image loading.
- Added stylish CSS spinner animation for the loading state.
- Synchronized the display of the menu recommendation text to appear only after the associated image has finished loading.
- Updated 'style.css', 'index.html', and 'main.js' accordingly.

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <main class="container">
         <article>
             <div class="menu-display">
-                <div id="loading-indicator" style="display: none; text-align: center; margin-bottom: 15px;">
+                <div id="loading-indicator">
+                    <div class="loader"></div>
                     <p>로딩 중...</p>
-                    <!-- You can add a spinner GIF or CSS spinner here for better UX -->
                 </div>
                 <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none; width:30em; max-width: 100%; height: auto; margin-bottom: 15px; border-radius: 8px;">
                 <span id="menu-recommendation">AI가 잠시 후 저녁 메뉴를 추천합니다...</span>
