Enhancement: Harmonize sentiment display heading style
- Changed the '오늘의 금융 시장 심리를 확인해 보세요.' from a span to an h2 tag in 'sentiment.html'.
- Applied consistent styling to this new h2 element in 'style.css' to match the proverb heading, ensuring visual harmony.
- Replaced the 'market-score' span with a generic paragraph as the score logic is currently commented out.

--- a/sentiment.html
+++ b/sentiment.html
@@ -83,8 +83,8 @@
             </div>
 
             <div class="sentiment-display">
-                <span id="market-sentiment">오늘의 금융 시장 심리를 확인해 보세요.</span>
-                <span id="market-score" style="display: block; margin-top: 10px; font-size: 1.2em; font-weight: bold;"></span>
+                <h2>오늘의 금융 시장 심리를 확인해 보세요.</h2>
+                <p style="margin-top: 10px; font-size: 1.2em; font-weight: bold;">준비중입니다.</p>
             </div>
             <button id="generate-sentiment">심리 확인하기</button>
 
