--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         </div>
         <h1><a href="/">오늘 저녁 뭐 먹지?</a></h1>
         <nav>
-            <a href="/insect.html" style="margin-left: 20px;">곤충상 테스트</a>
+            <a href="/insect.html">곤충상 테스트</a>
+            <a href="/about-insect.html" style="margin-left: 20px;">곤충상이란?</a>
             <a href="/sentiment.html" style="margin-left: 20px;">금융 시장 심리</a>
         </nav>
     </header>
